--- a/index.html
+++ b/index.html
@@ -44,15 +44,14 @@
         ga('send', 'pageview');
     </script>
     <script type="text/javascript">
-        window._mfq = window._mfq || [];
-        (function() {
-            var mf = document.createElement("script");
-            mf.type = "text/javascript";
-            mf.async = true;
-            mf.src = "//cdn.mouseflow.com/projects/a336f376-1b80-474c-8d13-e0772bedfd18.js";
-            document.getElementsByTagName("head")[0].appendChild(mf);
-        })();
-    </script>
+    window._mfq = window._mfq || [];
+    (function() {
+        var mf = document.createElement("script");
+        mf.type = "text/javascript"; mf.async = true;
+        mf.src = "//cdn.mouseflow.com/projects/23dbca73-aecb-4257-943a-2b0d82c9ab64.js";
+        document.getElementsByTagName("head")[0].appendChild(mf);
+    })();
+</script>
 </head>
 
 <body>
