--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="google-site-verification" content="ic6nhSwELKZLyuXbIxBLM-WFEAldq6Vfs38MbJvbUCI" />
     <title>Robson Vital - Web Designer / Front-End Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
