--- a/index.html
+++ b/index.html
@@ -135,8 +135,11 @@
                     <div class="col-md-8 col-sm-8 col-xs-12">
                         <div class="row">
                             <div class="col-md-12">
-                                <p> Meu nome é <strong>Robson Vital</strong>. Tenho 29 anos, moro atualmente em Curitiba-PR (e não sou antipático), e trabalho como <strong>Desenvolvedor de Interface.</strong> </p>
-                                <p> Atualmente trabalho para <a href="http://www.socarrao.com.br/" target="_blank">SóCarrão</a> como Designer/Desenvolvedor de interface. Já trabalhei para empresas como <a href="http://www.bne.com.br/" target="_blank">BNE - Banco Nacional do Emprego</a> e fiquei 1 ano alocado no <strong>HSBC</strong> pela empresa <strong>BRQ</strong>. Desenvolvi e participei de vários projetos legais, alguns deles estão aqui no meu portfolio. </p>
+                                <p> Meu nome é <strong>Robson Vital</strong>. Tenho 29 anos, moro atualmente em Curitiba-PR, trabalho como <strong>Desenvolvedor Front-end.</strong> 
+                                para a <a href="http://www.nerdweb.com.br/" target="_blank">Nerdweb</a>, anteriormente trabalhei para <a href="http://www.socarrao.com.br/" target="_blank">SóCarrão</a> como Designer/Desenvolvedor de interface.
+					
+					
+				<p> Já trabalhei para empresas como <a href="http://www.bne.com.br/" target="_blank">BNE - Banco Nacional do Emprego</a> e fiquei 1 ano alocado no <strong>HSBC</strong> pela empresa <strong>BRQ</strong>. Desenvolvi e participei de vários projetos legais, alguns deles estão aqui no meu portfolio. </p>
                                 <p> Sou viciado em <strong>Design e usabilidade</strong> sempre conectado à novas tendências tecnológicas e inovadoras. Os 6 anos de experiência na área e pelo menos o dobro em paixão por tecnologia, resultam em um trabalho entregue com rapidez e competência. Buscando atender da melhor forma a proposta e necessidade do cliente. Isso quer dizer que crio o seu projeto da melhor maneira, utilizando as novas tecnologias do <strong>HTML5, CSS3, JS, usablidade e criatividade. </strong></p>
                                 <div class="col-md-12">
                                     <div class="skillbar clearfix " data-percent="85%">
