--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                 <a href="images/benecard-b.jpg" class="image-popup" title="Benecard"><img src="images/2.jpg" alt="Layout Benecard" class="img-responsive"></a>
                             </div>
                             <div class="col-md-6 col-sm-6 col-xs-6 work animate-box">
-                                <a href="images/paulista-b.jpg" class="image-popup" title="Prova para Gráfica Paulista"><img src="images/4.jpg" alt="Prova para Gráfica Paulista" class="img-responsive"></a>
+                                <a href="images/ufo-b.jpg" class="image-popup" title="Revista UFO - Front-end"><img src="images/8.jpg" alt="Revista UFO - Front-end" class="img-responsive"></a>
                             </div>
                             <div class="col-md-6 col-sm-6 col-xs-6 work animate-box">
                                 <a href="images/ibnv-b.jpg" class="image-popup" title="Igreja Batista Nova Vida"><img src="images/6.jpg" alt="Igreja Batista Nova Vida" class="img-responsive"></a>
