--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Robson Vital - UI / Front-End Developer</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Meu nome é Robson Vital. Tenho 30 anos, moro atualmente em Florianópolis , trabalho como UI/Fron-end Developer" />
+    <meta name="description" content="Meu nome é Robson Vital. Tenho 30 anos, moro atualmente em Florianópolis , trabalho como UI/Front-end Developer" />
     <meta name="keywords" content="web designer. designer curitiba, font-end, UX, UI, Curitiba, HTML, CSS, " />
     <meta name="author" content="Robsob Moura" />
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
@@ -112,7 +112,7 @@
                     <div class="col-md-8 col-sm-8 col-xs-12">
                         <div class="row">
                             <div class="col-md-12">
-                                <p> Meu nome é <strong>Robson Vital</strong>. Tenho 30 anos, moro atualmente em Florianópolis , trabalho como <strong>UI/Fron-end Developer</strong> 
+                                <p> Meu nome é <strong>Robson Vital</strong>. Tenho 30 anos, moro atualmente em Florianópolis , trabalho como <strong>UI/Front-end Developer</strong> 
                                 para a <a href="http://www.samaiait.com.br/" target="_blank">Samaia IT</a>, anteriormente trabalhei para <a href="http://www.nerdweb.com.br/" target="_blank">Nerdweb</a> como Desenvolvedor Front-end.
 				<p> Já trabalhei para empresas como <a href="http://www.bne.com.br/" target="_blank">BNE - Banco Nacional do Emprego</a> e fiquei 1 ano alocado no <strong>HSBC</strong> pela empresa <strong>BRQ</strong>. Desenvolvi e participei de vários projetos legais, alguns deles estão aqui no meu portfolio. </p>
                                 <p> Sou viciado em <strong>Design e usabilidade</strong> sempre conectado à novas tendências tecnológicas e inovadoras. Os 9 anos de experiência na área e pelo menos o dobro em paixão por tecnologia, resultam em projetos entregue com agilidade e competência. Buscando atender da melhor forma a proposta e necessidade do cliente. Isso quer dizer que crio o seu projeto da melhor maneira, utilizando as novas tecnologias do <strong>HTML5, CSS3, JS, usabilidade e criatividade. </strong></p>
